speed up auth + response time?

--- a/firebase/clipboard.html
+++ b/firebase/clipboard.html
@@ -41,6 +41,10 @@
     <p id="load">Firebase SDK Loading&hellip;</p>
 
     <script>
+      /*
+      this file is for testing purposes only
+       */
+
       document.addEventListener('DOMContentLoaded', event => {
         const loadEl = document.querySelector('#load');
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
